--- a/spanda_domains/services/EdTech/Dockerfile.Analysis
+++ b/spanda_domains/services/EdTech/Dockerfile.Analysis
@@ -5,11 +5,10 @@ WORKDIR /edtech
 # Copy files
 COPY . /edtech
 
-
 RUN apt-get update && apt-get install -y poppler-utils gcc libpq-dev && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --upgrade pip && pip install -e FunctionalBlocks/AnalysisAlgorithms
+RUN pip install --upgrade pip && pip install -e microservices/AnalysisAlgorithms
 
 EXPOSE 9000
 
-CMD ["uvicorn", "FunctionalBlocks.AnalysisAlgorithms.api:app", "--host", "0.0.0.0", "--port", "9000", "--reload"]
+CMD ["uvicorn", "microservices.AnalysisAlgorithms.api:app", "--host", "0.0.0.0", "--port", "9000", "--reload"]
