--- a/spanda_domains/services/EdTech/Dockerfile.BusinessLogic
+++ b/spanda_domains/services/EdTech/Dockerfile.BusinessLogic
@@ -7,8 +7,8 @@ COPY . /edtech
 
 RUN apt-get update && apt-get install -y poppler-utils gcc libpq-dev && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --upgrade pip && pip install -e FunctionalBlocks/BusinessLogic
+RUN pip install --upgrade pip && pip install -e microservices/BusinessLogic
 
 EXPOSE 9002
 
-CMD ["uvicorn", "FunctionalBlocks.BusinessLogic.api:app", "--host", "0.0.0.0", "--port", "9002", "--reload"]
+CMD ["uvicorn", "microservices.BusinessLogic.api:app", "--host", "0.0.0.0", "--port", "9002", "--reload"]
