--- a/spanda_domains/services/EdTech/Dockerfile.Data
+++ b/spanda_domains/services/EdTech/Dockerfile.Data
@@ -7,8 +7,8 @@ COPY . /edtech
 
 RUN apt-get update && apt-get install -y poppler-utils gcc libpq-dev && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --upgrade pip && pip install -e FunctionalBlocks/DataPreprocessing
+RUN pip install --upgrade pip && pip install -e microservices/DataPreprocessing
 
 EXPOSE 9001
 
-CMD ["uvicorn", "FunctionalBlocks.DataPreprocessing.api:app", "--host", "0.0.0.0", "--port", "9001", "--reload"]
+CMD ["uvicorn", "microservices.DataPreprocessing.api:app", "--host", "0.0.0.0", "--port", "9001", "--reload"]
