code cleanup - Confusion about .env

--- a/spanda_domains/services/EdTech/examples/DissertationAnalysis/example.env
+++ b/spanda_domains/services/EdTech/examples/DissertationAnalysis/example.env
@@ -1,14 +1,4 @@
-# API Gateway will run on this port
-PORT=8090
-
-# API Gateway Configuration - for microservices - where all microservies will run
-DATA_PROCESSING_URL=http://localhost:9001
-EDU_AI_AGENTS_URL=http://localhost:9002
-WEBSOCKET_SERVICE_URL=ws://localhost:9000
-
-
-# Platform Services
-    # Hugging Face Token for vLLM services
+    # Hugging Face Token
     HF_TOKEN=your_hf_token_here
 
     # # VLLM Services
@@ -32,3 +22,17 @@ WEBSOCKET_SERVICE_URL=ws://localhost:9000
     OLLAMA_MODEL_FOR_SUMMARY = "llama3.2"            
     OLLAMA_MODEL_FOR_IMAGE = "llava-phi3"
     OLLAMA_MODEL_FOR_SCORING = "llama3.1"
+
+    # React App Configuration
+    REACT_APP_API_URL=http://localhost:8007
+
+    # Kafka Configuration
+    KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+    KAFKA_TOPIC=dissertation_analysis_queue
+    MAX_CONCURRENT_USERS=2
+
+    # Redis Configuration
+    REDIS_URL=redis://redis:6379
+
+    # Database Configuration
+    SQLALCHEMY_DATABASE_URL=postgresql://user:password@localhost:3306/dbname
