--- a/env.example
+++ b/env.example
@@ -33,3 +33,9 @@ WEBSOCKET_SERVICE_URL=ws://localhost:9000
     OLLAMA_MODEL_FOR_IMAGE = "llava-phi3"
     OLLAMA_MODEL_FOR_SCORING = "llama3.2"
 
+VERBA_URL = "http://localhost:8000"     # make this an env variable
+DB_TYPE = "Docker"
+WEAVIATE_URL="" # This needs to be an empty string, or needs to be the url in case of cloud weaviate instance
+WEAVIATE_KEY="" # This needs to be an empty string, or needs to be the key in case of cloud weaviate instance
+EMBEDDER = "SentenceTransformers"
+EMBEDDING_MODEL = "all-MiniLM-L6-v2"
