--- a/spanda_domains/services/EdTech/api_gateway/kong.yml
+++ b/spanda_domains/services/EdTech/api_gateway/kong.yml
@@ -130,6 +130,24 @@ plugins:
     config:
       minute: 60
       policy: local
+  # - name: cors
+  #   config:
+  #     origins:
+  #       - "*"
+  #     methods:
+  #       - GET
+  #       - POST
+  #     headers:
+  #       - Content-Type
+  #       - Authorization
+  #     exposed_headers:
+  #       - X-Auth-Token
+  #     credentials: true
+  #     max_age: 3600
+  # - name: key-auth
+  #   config:
+  #     key_names:
+  #       - apikey
   - name: file-log
     config:
       path: /usr/local/kong/logs/file.log
