face-analysis piece completed, started document_similarity piece, added documentation for the same

--- a/domains/EdTech/env.example
+++ b/domains/EdTech/env.example
@@ -31,6 +31,16 @@
     EMBEDDER = "SentenceTransformers"
     EMBEDDING_MODEL = "all-MiniLM-L6-v2"
 
+    # Set GPU to -1 for CPU processing, or gpu id for using a particular gpu
+    GPU=0
+
+    # Set the range for Yaw (rotation around the vertical axis)
+    YAW_HIGH=30
+    YAW_LOW=-30
+
+    # Set the range for Pitch (rotation around the horizontal axis)
+    PITCH_HIGH=30
+    PITCH_LOW=-40
 
 
 # # Platform Services for local version of services
@@ -65,3 +75,14 @@
 #     WEAVIATE_KEY="" # This needs to be an empty string, or needs to be the key in case of cloud weaviate instance
 #     EMBEDDER = "SentenceTransformers"
 #     EMBEDDING_MODEL = "all-MiniLM-L6-v2"
+
+#    # Set GPU to -1 for CPU processing, or gpu id for using a particular gpu
+#    GPU=0
+
+#    # Set the range for Yaw (rotation around the vertical axis)
+#    YAW_HIGH=30
+#    YAW_LOW=-30
+
+#    # Set the range for Pitch (rotation around the horizontal axis)
+#    PITCH_HIGH=30
+#    PITCH_LOW=-40
