--- a/domains/EdTech/face_analysis/env.example
+++ b/domains/EdTech/face_analysis/env.example
@@ -1,15 +1,10 @@
-# Video Processing Configuration
-VIDEO_BATCH_SIZE=10
-VIDEO_OUTPUT_FPS=4
+# Set GPU to -1 for CPU processing, or gpu id for using a particular gpu
+GPU=0
 
-# Model Configuration
-MODEL_GPU_ID=-1
+# Set the range for Yaw (rotation around the vertical axis)
+YAW_HIGH=30
+YAW_LOW=-30
 
-# Attention Detection Configuration
-ATTENTION_PITCH_MIN=-40
-ATTENTION_PITCH_MAX=30
-ATTENTION_YAW_MIN=-30
-ATTENTION_YAW_MAX=30
-ATTENTION_T1=2000
-ATTENTION_T2=4000
-ATTENTION_THRESHOLD=0.7
+# Set the range for Pitch (rotation around the horizontal axis)
+PITCH_HIGH=30
+PITCH_LOW=-40
