--- a/platform/testing/docker-compose-promptfoo.yml
+++ b/platform/testing/docker-compose-promptfoo.yml
@@ -7,8 +7,22 @@ services:
       - "7100:7100"
     environment:
       - PYTHONUNBUFFERED=1
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - app_network
+      - platform_network
 
   ui:
     image: prabhas264/promptfoo-ui
     ports:
       - "7101:80"
+    networks:
+      - app_network
+      - platform_network
+
+networks:
+  app_network:
+    external: true
+  platform_network:
+    external: true
