--- a/platform/testing/promptfoo-functional/promptfoo-backend/Dockerfile
+++ b/platform/testing/promptfoo-functional/promptfoo-backend/Dockerfile
@@ -1,12 +1,14 @@
 FROM python:3.10-slim
 
-# Install system dependencies
+# Install system dependencies including the Docker CLI
 RUN apt-get update && apt-get install -y \
     curl \
     gnupg \
+    docker.io \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Node.js and npm
+    
+# Install Node.js and npm, then install promptfoo globally
 RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - \
     && apt-get install -y nodejs \
     && npm install -g promptfoo
