added unsloth for single node

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "platform/fine-tuning_and_training/ms-swift"]
 	path = platform/fine-tuning_and_training/ms-swift
 	url = https://github.com/spandaai/ms-swift.git
+[submodule "platform/fine-tuning_and_training/unsloth"]
+	path = platform/fine-tuning_and_training/unsloth
+	url = https://github.com/spandaai/unsloth.git
