--- a/domains/EdTech/api_gateway/docker-compose.yml
+++ b/domains/EdTech/api_gateway/docker-compose.yml
@@ -1,40 +1,40 @@
 version: '3.8'
 
 services:
-  kong-database:
+  kong-database-edtech-domain:
     image: postgres:13
     environment:
       POSTGRES_USER: kong
       POSTGRES_DB: kong
       POSTGRES_PASSWORD: kongpass
     ports:
-      - "5432:5432"
+      - "5431:5431"
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "kong"]
       interval: 5s
       timeout: 5s
       retries: 5
 
-  kong-migrations:
+  kong-migrations-edtech-domain:
     image: kong
     command: kong migrations bootstrap
     depends_on:
-      kong-database:
+      kong-database-edtech-domain:
         condition: service_healthy
     environment:
       KONG_DATABASE: "postgres"
-      KONG_PG_HOST: kong-database
+      KONG_PG_HOST: kong-database-edtech-domain
       KONG_PG_USER: kong
       KONG_PG_PASSWORD: kongpass
 
-  kong:
+  kong-edtech-domain:
     image: kong
     depends_on:
-      kong-migrations:
+      kong-migrations-edtech-domain:
         condition: service_completed_successfully
     environment:
       KONG_DATABASE: "postgres"
-      KONG_PG_HOST: kong-database
+      KONG_PG_HOST: kong-database-edtech-domain
       KONG_PG_USER: kong
       KONG_PG_PASSWORD: kongpass
       KONG_PROXY_ACCESS_LOG: /dev/stdout
