--- a/domains/EdTech/api_gateway/kong.yml
+++ b/domains/EdTech/api_gateway/kong.yml
@@ -6,6 +6,9 @@ services:
   # Data Processing Service
   - name: data-processing-service
     url: http://host.docker.internal:9001
+    connect_timeout: 3600000
+    write_timeout: 3600000
+    read_timeout: 3600000
     routes:
       - name: chunk-text
         paths:
@@ -13,36 +16,42 @@ services:
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: first-n-words
         paths:
           - /api/first-n-words
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: resize-image
         paths:
           - /api/resize-image
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: process-images-batch
         paths:
           - /api/process-images-batch
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: process-pdf
         paths:
           - /api/process-pdf
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: process-docx
         paths:
           - /api/process-docx
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: health
         paths:
           - /api/health
@@ -53,6 +62,9 @@ services:
   # Document Analysis Service
   - name: document-analysis-service
     url: http://host.docker.internal:9000
+    connect_timeout: 3600000
+    write_timeout: 3600000
+    read_timeout: 3600000
     protocol: http
     routes:
       - name: document-analysis-ws
@@ -72,10 +84,14 @@ services:
         strip_path: false
         methods:
           - POST
+          - OPTIONS
 
   # Educational AI Agents Service
   - name: edu-ai-agents-service
     url: http://host.docker.internal:9002
+    connect_timeout: 3600000
+    write_timeout: 3600000
+    read_timeout: 3600000
     routes:
       - name: process-chunks
         paths:
@@ -83,40 +99,49 @@ services:
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: summarize-analyze
         paths:
           - /api/summarize-analyze
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: extract-name
         paths:
           - /api/extract-name
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: extract-topic
         paths:
           - /api/extract-topic
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: extract-degree
         paths:
           - /api/extract-degree
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: scoring
         paths:
           - /api/scoring
         strip_path: false
         methods:
           - POST
+          - OPTIONS
 
   # QA Generation Service
   - name: qa-generation-service
     url: http://host.docker.internal:9004
+    connect_timeout: 3600000
+    write_timeout: 3600000
+    read_timeout: 3600000
     routes:
       - name: questions-generation
         paths:
@@ -124,21 +149,27 @@ services:
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: answers-generation
         paths:
           - /api/answers_generation
         strip_path: false
         methods:
           - POST
+          - OPTIONS
       - name: ingest-files
         paths:
           - /api/ingest_files
         strip_path: false
         methods:
           - POST
+          - OPTIONS
 
   - name: face-analysis-service
     url: http://host.docker.internal:9005
+    connect_timeout: 3600000
+    write_timeout: 3600000
+    read_timeout: 3600000
     routes:
       - name: process-video-route
         paths:
@@ -162,20 +193,32 @@ plugins:
     config:
       minute: 60
       policy: local
-  # - name: cors
-  #   config:
-  #     origins:
-  #       - "*"
-  #     methods:
-  #       - GET
-  #       - POST
-  #     headers:
-  #       - Content-Type
-  #       - Authorization
-  #     exposed_headers:
-  #       - X-Auth-Token
-  #     credentials: true
-  #     max_age: 3600
+  - name: cors
+    config:
+      origins:
+        - "*"
+      methods:
+        - GET
+        - HEAD
+        - PUT
+        - POST
+        - DELETE
+        - OPTIONS
+      headers:
+        - Content-Type
+        - Authorization
+        - X-Requested-With
+      exposed_headers:
+        - "*"
+      credentials: true
+      max_age: 3600
+  - name: http-log
+    config:
+      http_endpoint: http://localhost:9999/log
+      method: POST
+      timeout: 10000
+      keepalive: 60000
+      content_type: application/json
   # - name: key-auth
   #   config:
   #     key_names:
