--- a/domains/EdTech/env.example
+++ b/domains/EdTech/env.example
@@ -17,30 +17,30 @@
     # VLLM_MODEL_FOR_SCORING=AMead10/Llama-3.2-3B-Instruct-AWQ
 
     #############OLLAMA PARAMS###################
-    OLLAMA_URL = "http://host.docker.internal:11434"
+    OLLAMA_URL = "http://ollama:11434"
     OLLAMA_MODEL_FOR_ANALYSIS = "llama3.2"            
     OLLAMA_MODEL_FOR_EXTRACTION = "llama3.2"            
     OLLAMA_MODEL_FOR_SUMMARY = "llama3.2"            
     OLLAMA_MODEL_FOR_IMAGE = "llava-phi3"
     OLLAMA_MODEL_FOR_SCORING = "llama3.2"
 
-    VERBA_URL = "http://host.docker.internal:8000"     # make this an env variable
+    VERBA_URL = "http://verba:8000"     # make this an env variable
     DB_TYPE = "Docker"
     WEAVIATE_URL="" # This needs to be an empty string, or needs to be the url in case of cloud weaviate instance
     WEAVIATE_KEY="" # This needs to be an empty string, or needs to be the key in case of cloud weaviate instance
     EMBEDDER = "SentenceTransformers"
     EMBEDDING_MODEL = "all-MiniLM-L6-v2"
 
-    # Set GPU to -1 for CPU processing, or gpu id for using a particular gpu
-    GPU=0
+   # Set GPU to -1 for CPU processing, or gpu id for using a particular gpu
+   GPU=0
 
-    # Set the range for Yaw (rotation around the vertical axis)
-    YAW_HIGH=30
-    YAW_LOW=-30
+   # Set the range for Yaw (rotation around the vertical axis)
+   YAW_HIGH=30
+   YAW_LOW=-30
 
-    # Set the range for Pitch (rotation around the horizontal axis)
-    PITCH_HIGH=30
-    PITCH_LOW=-40
+   # Set the range for Pitch (rotation around the horizontal axis)
+   PITCH_HIGH=30
+   PITCH_LOW=-40
 
 
 # # Platform Services for local version of services
@@ -63,11 +63,11 @@
 
 #     #############OLLAMA PARAMS###################
 #     OLLAMA_URL = "http://localhost:11434"
-#     OLLAMA_MODEL_FOR_ANALYSIS = "llama3.2"            
-#     OLLAMA_MODEL_FOR_EXTRACTION = "llama3.2"            
-#     OLLAMA_MODEL_FOR_SUMMARY = "llama3.2"            
+#     OLLAMA_MODEL_FOR_ANALYSIS = "llama3.1"            
+#     OLLAMA_MODEL_FOR_EXTRACTION = "llama3.1"            
+#     OLLAMA_MODEL_FOR_SUMMARY = "llama3.1"            
 #     OLLAMA_MODEL_FOR_IMAGE = "llava-phi3"
-#     OLLAMA_MODEL_FOR_SCORING = "llama3.2"
+#     OLLAMA_MODEL_FOR_SCORING = "llama3.1"
 
 #     VERBA_URL = "http://localhost:8000"     # make this an env variable
 #     DB_TYPE = "Docker"
@@ -76,13 +76,13 @@
 #     EMBEDDER = "SentenceTransformers"
 #     EMBEDDING_MODEL = "all-MiniLM-L6-v2"
 
-#    # Set GPU to -1 for CPU processing, or gpu id for using a particular gpu
-#    GPU=0
+#     # Set GPU to -1 for CPU processing, or gpu id for using a particular gpu
+#     GPU=-1
 
-#    # Set the range for Yaw (rotation around the vertical axis)
-#    YAW_HIGH=30
-#    YAW_LOW=-30
+#     # Set the range for Yaw (rotation around the vertical axis)
+#     YAW_HIGH=30
+#     YAW_LOW=-30
 
-#    # Set the range for Pitch (rotation around the horizontal axis)
-#    PITCH_HIGH=30
-#    PITCH_LOW=-40
+#     # Set the range for Pitch (rotation around the horizontal axis)
+#     PITCH_HIGH=30
+#     PITCH_LOW=-40
