updated readmes for launch

--- a/domains/EdTech/env.example
+++ b/domains/EdTech/env.example
@@ -31,7 +31,7 @@
     EMBEDDER = "SentenceTransformers"
     EMBEDDING_MODEL = "all-MiniLM-L6-v2"
 
-   # Set GPU to -1 for CPU processing, or gpu id for using a particular gpu
+   # Set GPU to -1 for CPU processing, or gpu id for using a particular gpu for Face detection/analysis DL models.
    GPU=0
 
    # Set the range for Yaw (rotation around the vertical axis)
