restructure training directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "platform/observability/dockprom"]
 	path = platform/observability/dockprom
 	url = git@github.com:stefanprodan/dockprom.git
-[submodule "platform/fine-tuning_and_training/Llama-Factory"]
-	path = platform/fine-tuning_and_training/Llama-Factory
+[submodule "platform/train/Llama-Factory"]
+	path = platform/train/Llama-Factory
 	url = https://github.com/hiyouga/LLaMA-Factory.git
-[submodule "platform/fine-tuning_and_training/unsloth"]
-	path = platform/fine-tuning_and_training/unsloth
+[submodule "platform/train/unsloth"]
+	path = platform/train/unsloth
 	url = https://github.com/spandaai/unsloth.git
-[submodule "platform/fine-tuning_and_training/LLaMA-Factory"]
-	path = platform/fine-tuning_and_training/LLaMA-Factory
+[submodule "platform/train/LLaMA-Factory"]
+	path = platform/train/LLaMA-Factory
 	url = https://github.com/hiyouga/LLaMA-Factory.git
