--- a/platform/data_management/docker-compose.yml
+++ b/platform/data_management/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3"
 
 services:
   # Nessie Catalog Server Using In-Memory Store
@@ -6,10 +6,9 @@ services:
     image: projectnessie/nessie:latest
     container_name: nessie
     networks:
-      - sqlserver-dremio-superset
+      de-end-to-end:
     ports:
-      - "19120:19120"
-
+      - 19120:19120
   # Minio Storage Server
   minio:
     image: minio/minio:latest
@@ -21,46 +20,56 @@ services:
       - MINIO_REGION_NAME=us-east-1
       - MINIO_REGION=us-east-1
     networks:
-      - sqlserver-dremio-superset
+      de-end-to-end:
     ports:
-      - "9001:9001"
-      - "9000:9000"
+      - 9001:9001
+      - 9000:9000
     command: ["server", "/data", "--console-address", ":9001"]
-
   # Dremio
   dremio:
     platform: linux/x86_64
     image: dremio/dremio-oss:latest
+    ports:
+      - 9047:9047
+      - 31010:31010
+      - 32010:32010
     container_name: dremio
-    environment:
-      - DREMIO_JAVA_SERVER_EXTRA_OPTS=-Dpaths.dist=file:///opt/dremio/data/dist
     networks:
-      - sqlserver-dremio-superset
-    ports:
-      - "9047:9047"
-      - "31010:31010"
-      - "32010:32010"
-
-  # SQL Server
-  sqlserver:
-    image: mcr.microsoft.com/mssql/server:2019-latest
-    container_name: sqlserver
+      de-end-to-end:
+  # Spark
+  spark:
+    platform: linux/x86_64
+    image: alexmerced/spark35nb:latest
+    ports: 
+      - 8080:8080  # Master Web UI
+      - 7077:7077  # Master Port
+      - 8888:8888  # Notebook
     environment:
-      SA_PASSWORD: "Yourpassword2024"
-      ACCEPT_EULA: "Y"
+      - AWS_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=admin #minio username
+      - AWS_SECRET_ACCESS_KEY=password #minio password
+    container_name: spark
     networks:
-      - sqlserver-dremio-superset
+      de-end-to-end:
+  # Postgres
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      POSTGRES_DB: mydb
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
     ports:
-      - "1433:1433"
-
-  # Superset
+      - "5435:5432"
+    networks:
+      de-end-to-end:
+  #Superset
   superset:
     image: alexmerced/dremio-superset
     container_name: superset
     networks:
-      - sqlserver-dremio-superset
+      de-end-to-end:
     ports:
-      - "8080:8088"
-
+      - 8088:8088
 networks:
-  sqlserver-dremio-superset:
+  de-end-to-end:
