--- a/platform/inference/docker-compose-ollama-gpu.yml
+++ b/platform/inference/docker-compose-ollama-gpu.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   ollama:
-    image: ollama/ollama:0.5.1
+    image: ollama/ollama:latest
     container_name: ollama
     ports:
       - "11434:11434"
