--- a/platform/inference/docker-compose-ollama-cpu.yml
+++ b/platform/inference/docker-compose-ollama-cpu.yml
@@ -2,7 +2,7 @@ version: '3.9'
 services:
   ollama:
     image: ollama/ollama:0.5.1
-    container_name: ollama
+    container_name: ollama-platform
     ports:
       - "11434:11434"
     volumes:
