--- a/platform/inference/docker-compose-ollama-gpu.yml
+++ b/platform/inference/docker-compose-ollama-gpu.yml
@@ -1,8 +1,8 @@
 version: '3.9'
 services:
   ollama:
-    image: ollama/ollama:latest
-    container_name: ollama
+    image: ollama/ollama:0.5.1
+    container_name: ollama-platform
     ports:
       - "11434:11434"
     volumes:
