--- a/platform/inference/kubernetes/manifest.yml
+++ b/platform/inference/kubernetes/manifest.yml
@@ -30,7 +30,7 @@ spec:
             medium: Memory
       containers:
         - name: vllm-vision
-          image: vllm/vllm-openai:v0.6.5
+          image: vllm/vllm-openai:latest
           lifecycle:
             postStart:
               exec:
@@ -50,21 +50,24 @@ spec:
               mountPath: /dev/shm
           args:
             - "--model"
-            - "Qwen/Qwen2-VL-2B-Instruct-AWQ"
+            - "Qwen/Qwen2.5-VL-32B-Instruct-AWQ"
             - "--gpu-memory-utilization"
-            - "0.2"
+            - "0.9"
             - "--max-num-batched-tokens"
-            - "32768"
+            - "8192"
             - "--max-num-seqs"
-            - "64"
+            - "16"
             - "--max-model-len"
-            - "10000"
+            - "4096"
             - "--block-size"
             - "16"
             - "--swap-space"
-            - "4"
+            - "1"
             - "--tensor-parallel-size"
             - "1"
+            - "--enforce-eager"
+            - "--dtype"
+            - "float16"
           securityContext:
             privileged: true
           imagePullPolicy: Always
@@ -82,7 +85,6 @@ spec:
       targetPort: 8000
   type: ClusterIP
 ---
-vllm : deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -108,7 +110,7 @@ spec:
           medium: Memory
       containers:
       - name: vllm
-        image: vllm/vllm-openai:v0.6.5
+        image: vllm/vllm-openai:latest
         ports:
         - containerPort: 8000
         env:
