--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "foundation/conversational_data_analytics/foundation/conversational_data_analytics/VannaSpanda"]
 	path = foundation/conversational_data_analytics/foundation/conversational_data_analytics/VannaSpanda
 	url = https://github.com/spandaai/VannaSpanda.git
+[submodule "foundation/conversational_optimization/foundation/conversational_optimization/SpandaOptiChat"]
+	path = foundation/conversational_optimization/foundation/conversational_optimization/SpandaOptiChat
+	url = https://github.com/spandaai/SpandaOptiChat.git
