--- a/foundation/data_management/Setup/DataIngestion/Data-Ingestion.yml
+++ b/foundation/data_management/Setup/DataIngestion/Data-Ingestion.yml
@@ -4,7 +4,7 @@ services:
     platform: linux/x86_64
     image: alexmerced/spark35nb:latest
     ports: 
-      - 8080:8080  # Master Web UI
+      # - 8080:8080  # Master Web UI
       - 7077:7077  # Master Port
       - 8888:8888  # Notebook
     environment:
@@ -14,6 +14,8 @@ services:
     container_name: spark
     networks:
       - Spanda-Net
+    volumes:
+      - ./:/workspace/user_data
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.0
@@ -35,6 +37,8 @@ services:
     container_name: kafka
     networks:
       - Spanda-Net
+    volumes:
+      - ./:/user_data
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -43,6 +47,25 @@ services:
       # Replication factor for the offsets topic
       # KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  nifi:
+    image: apache/nifi:latest
+    container_name: nifi
+    ports:
+      - "8080:8080"  
+      - "8443:8443"  
+
+
+    environment:
+      - NIFI_WEB_HTTP_PORT=8080
+      - SINGLE_USER_CREDENTIALS_USERNAME=admin 
+      - SINGLE_USER_CREDENTIALS_PASSWORD=password1234
+    volumes:
+      - ./:/user_data
+    # networks:
+    #   de-end-to-end:
+    networks:
+      - Spanda-Net
   
 networks:
   Spanda-Net:
