Added airbyte and .env

--- a/foundation/data_management/Setup/DataIngestion/Data-Ingestion.yml
+++ b/foundation/data_management/Setup/DataIngestion/Data-Ingestion.yml
@@ -5,12 +5,12 @@ services:
     image: alexmerced/spark35nb:latest
     ports: 
       # - 8080:8080  # Master Web UI
-      - 7077:7077  # Master Port
-      - 8888:8888  # Notebook
+      - ${SPARK_MASTER_EXTERNAL_PORT}:7077  # Master Port
+      - ${SPARK_JUPYTER_NOTEBOOK_EXTERNAL_PORT}:8888  # Notebook
     environment:
-      - AWS_REGION=us-east-1
-      - AWS_ACCESS_KEY_ID=admin #minio username
-      - AWS_SECRET_ACCESS_KEY=password #minio password
+      - AWS_REGION=${MINIO_REGION_NAME}
+      - AWS_ACCESS_KEY_ID=${MINIO_ROOT_USER} #minio username
+      - AWS_SECRET_ACCESS_KEY=${MINIO_ROOT_PASSWORD} #minio password
     container_name: spark
     networks:
       - Spanda-Net
@@ -23,47 +23,51 @@ services:
     networks:
       - Spanda-Net
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_KAFKA_CLIENT_PORT}
+      ZOOKEEPER_TICK_TIME: ${ZOOKEEPER_KAFKA_TICK_TIME}
     ports:
-      - "2181:2181"
+      - "${ZOOKEEPER_KAFKA_CLIENT_EXTERNAL_PORT}:2181"
+
 
   kafka:
     image: confluentinc/cp-kafka:7.4.0
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
+      - "${KAFKA_CLIENT_EXTERNAL_PORT}:9092"
     container_name: kafka
     networks:
       - Spanda-Net
     volumes:
       - ./:/user_data
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_BROKER_ID: ${KAFKA_BROKER_ID}
+      KAFKA_ZOOKEEPER_CONNECT: ${KAFKA_ZOOKEEPER_CONNECT}
+      KAFKA_ADVERTISED_LISTENERS: ${KAFKA_ADVERTISED_LISTENERS}
       # Defines the interface and port Kafka listens on
       # Replication factor for the offsets topic
-      # KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: ${KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR}
 
   nifi:
     image: apache/nifi:latest
     container_name: nifi
     ports:
-      - "8080:8080"  
-      - "8443:8443"  
+      - "${NIFI_EXTERNAL_PORT_HTTP}:8080"  
+      - "${NIFI_EXTERNAL_PORT_HTTPS}:8443"  
 
 
     environment:
-      - NIFI_WEB_HTTP_PORT=8080
-      - SINGLE_USER_CREDENTIALS_USERNAME=admin 
-      - SINGLE_USER_CREDENTIALS_PASSWORD=password1234
+      - NIFI_WEB_HTTP_PORT=${NIFI_WEB_HTTP_PORT}
+      - SINGLE_USER_CREDENTIALS_USERNAME=${NIFI_SINGLE_USER_CREDENTIALS_USERNAME} 
+      - SINGLE_USER_CREDENTIALS_PASSWORD=${NIFI_SINGLE_USER_CREDENTIALS_PASSWORD}
     volumes:
       - ./:/user_data
-    # networks:
-    #   de-end-to-end:
+      - ./nifi-instance-data/conf:/opt/nifi/nifi-current/conf
+      - ./nifi-instance-data/database_repository:/opt/nifi/nifi-current/database_repository
+      - ./nifi-instance-data/flowfile_repository:/opt/nifi/nifi-current/flowfile_repository
+      - ./nifi-instance-data/content_repository:/opt/nifi/nifi-current/content_repository
+      - ./nifi-instance-data/provenance_repository:/opt/nifi/nifi-current/provenance_repository
+      - ./nifi-instance-data/state:/opt/nifi/nifi-current/state
     networks:
       - Spanda-Net
   
