--- a/foundation/data_management/Setup/DataAnalytics/Data-Analytics.yml
+++ b/foundation/data_management/Setup/DataAnalytics/Data-Analytics.yml
@@ -5,7 +5,7 @@ services:
     networks:
       - Spanda-Net
     ports:
-      - "8088:8088"
+      - "${SUPERSET_UI_EXTERNAL_PORT}:8088"
 
 networks:
   Spanda-Net:
