--- a/foundation/data_management/Setup/DataLake/Data-Lake.yml
+++ b/foundation/data_management/Setup/DataLake/Data-Lake.yml
@@ -6,22 +6,24 @@ services:
     networks:
       - Spanda-Net
     ports:
-      - 19120:19120
+      - ${NESSIE_EXTERNAL_PORT}:19120
+
   # Minio Storage Server
   minio:
     image: minio/minio:latest
     container_name: minio
     environment:
-      - MINIO_ROOT_USER=admin
-      - MINIO_ROOT_PASSWORD=password
-      - MINIO_DOMAIN=storage
-      - MINIO_REGION_NAME=us-east-1
-      - MINIO_REGION=us-east-1
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+      - MINIO_DOMAIN=${MINIO_DOMAIN}
+      - MINIO_REGION_NAME=${MINIO_REGION_NAME}
+      - MINIO_REGION=${MINIO_REGION}
     networks:
       - Spanda-Net
     ports:
-      - 9001:9001
-      - 9000:9000
+      - ${MINIO_EXTERNAL_PORT_1}:9001
+      - ${MINIO_EXTERNAL_PORT_2}:9000
+
     command: ["server", "/data", "--console-address", ":9001"]
   
 networks:
